--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,3 +15,8 @@ LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )
 ADD_EXECUTABLE( generate_pointcloud generatePointCloud.cpp )
 TARGET_LINK_LIBRARIES( generate_pointcloud ${OpenCV_LIBS} 
     ${PCL_LIBRARIES} )
+
+ADD_LIBRARY( slambase slamBase.cpp )
+TARGET_LINK_LIBRARIES( slambase
+	${OpenCV_LIBS}
+	${PCL_LIBRARIES} )
